<resources>
    <string name="app_name">Eatmou</string>
    <string name="Restaurant">Restaurant</string>
    <string name="Party">Party</string>
    <string name="Manage">Manage</string>
    <string name="Profile">Profile</string>
    <string name="Profile_Page">Profile Page</string>
    <string name="Manage_Password">Manage Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invite_title">Invite Galileo Galilei</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="matched">Matched</string>
    <string name="received_invitations">Received Invitations</string>
    <string name="sort">Sort</string>
    <string name="sent_invitations">Sent Invitations</string>
    <string name="matched_history">Matched History</string>
    <string name="no_data">No Data</string>
    <string name="oh_no_no_invitation_received">Oh no! No invitation received.</string>
    <string name="oops_you_haven_t_sent_any_invitations">Oops! You haven\'t sent any invitations.</string>
    <string name="inbox">Inbox</string>
    <string name="canceled">Canceled</string>
    <string name="joined_invitations">Joined Invitations</string>
    <string name="seems_like_you_haven_t_join_any_events_yet">Seems like you haven\'t join any events yet!</string>
    <string name="joined">Joined</string>
    <string name="userid">userID</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="username">Username</string>
    <string name="status">Status</string>
    <string name="invited_user">Invited User</string>
    <string name="arrow">arrow</string>
    <string name="profile_pic">profile_pic</string>
    <string name="restaurant">Restaurant</string>
    <string name="date_title">Date:</string>
    <string name="start_time_title">Start Time:</string>
    <string name="end_time_title">End Time:</string>
    <string name="cancel_invitation">Cancel Invitation</string>
    <string name="organiser_name">Organiser Name</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="settings">Settings</string>
    <string name="confirm">Confirm</string>
    <string name="profile_page">Profile Page</string>
    <string name="edit_profile_back_button">Edit Profile Back Button</string>
    <string name="name">Name</string>
    <string name="birthdate">Birthdate</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="cover_picture">Cover Picture</string>
    <string name="about_me">About Me</string>
    <string name="address">Address</string>
    <string name="save">SAVE</string>
    <string name="manage_password">Manage Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="logout">Logout</string>
    <string name="applock">AppLock</string>
    <string name="community_guideline">Community Guideline</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="about">ABOUT</string>
    <string name="reviews">REVIEWS</string>
    <string name="hold_party">HOLD PARTY</string>
    <string name="leave_a_review">LEAVE A REVIEW</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">CANCEL</string>
    <string name="category_title">Category:</string>
    <string name="location_title">Location:</string>
    <string name="find_a_restaurant_now">Find a restaurant now</string>
    <string name="overall_satisfaction">Overall Satisfaction</string>
    <string name="tell_us_what_can_be_improved">Tell us what can be improved</string>
    <string name="user_experience">User Experience</string>
    <string name="personalisation">Personalisation</string>
    <string name="data_privacy_and_security">Data Privacy and Security</string>
    <string name="restaurant_details">Restaurant Details</string>
    <string name="restaurant_details_back_button">Restaurant Details Back Button</string>
    <string name="browse_restaurant">Browse Restaurant</string>
    <string name="restaurant_leaderboard">Restaurant Leaderboard</string>
    <string name="for_you">For You</string>
    <string name="create_party">Create Party</string>
    <string name="create_party_back_button">Create party back button</string>
    <string name="back_button">Back Button</string>
    <string name="privacy_policy_text">At Eatmou, we are committed to protecting your privacy. This Privacy Policy applies to Eatmou and explains how we collect, use, and share information about you when you use our app. By using Eatmou, you agree to the collection, use, and sharing of your information as described in this Privacy Policy. If you do not agree with our policies and practices, do not use our app.</string>
    <string name="information_we_collect">Information We Collect</string>
    <string name="text2">We collect information about you when you use our app, including: \nPersonal information: We may collect personal information such as your name, email address, and phone number when you create an account or register to use our app. \nUsage information: We may collect information about how you use our app, including the types of invitations you send and the parties you attend. \nDevice information: We may collect information about the device you use to access our app, including the device\'s IP address, operating system, and browser type.</string>
    <string name="how_we_use_your_information">How We Use Your Information</string>
    <string name="text3">We use the information we collect to provide, maintain, and improve our app, and to personalize your experience. We may also use your information to communicate with you, including to send you updates and marketing messages.</string>
    <string name="sharing_your_information">Sharing Your Information</string>
    <string name="text4">We may share your information with third parties in the following circumstances: \nWith service providers: We may share your information with service providers who perform services on our behalf, such as hosting or maintaining our app. \nWith business partners: We may share your information with business partners for marketing and promotional purposes. \nAs required by law: We may disclose your information if we are required to do so by law or if we believe that such action is necessary to comply with legal processes, to protect the rights and safety of ourselves or others, or to protect against legal liability.</string>
    <string name="data_retention_and_security">Data Retention and Security</string>
    <string name="text5">We will retain your information for as long as your account is active or as needed to provide you with the services offered through our app. We will take reasonable steps to protect the security of your information, including through the use of encryption and secure servers. However, no method of transmission over the internet or method of electronic storage is completely secure, and we cannot guarantee the absolute security of your information.</string>
    <string name="changes_to_this_privacy_policy">Changes to This Privacy Policy</string>
    <string name="text6">We may update this Privacy Policy from time to time to reflect changes in our practices or to comply with legal requirements. We encourage you to review this Privacy Policy regularly to stay informed about how we are protecting your information.</string>
    <string name="contact_us">Contact Us</string>
    <string name="text7">If you have any questions or concerns about this Privacy Policy or our privacy practices, please contact us at eatmou@gmail.com.</string>
    <string name="text11">Welcome to our app, the platform for connecting with friends and strangers alike to share meals and create food parties! By using our app, you agree to the following terms of service: \n\nYou are responsible for your own actions and the content you post on the app. This includes ensuring that you have the right to post any content that you share, and that such content does not violate any laws or the rights of others. \n\nYou must be at least 13 years old to use the app. If you are under 13, you may not use the app. \n\nYou may not use the app for any illegal or unauthorized purpose. This includes, but is not limited to, the creation of food parties that violate any laws or regulations. \n\nWe reserve the right to remove any content or user accounts that we determine to be in violation of these terms of service. \n\nWe are not responsible for the actions of any users of the app. You use the app at your own risk, and we recommend that you exercise caution and good judgment when interacting with others on the app. \n\nWe may change these terms of service at any time, and it is your responsibility to stay informed about any changes. If you do not agree to the revised terms, you must stop using the app. \n\nBy using the app, you agree to be bound by these terms of service. If you have any questions or concerns, please don\'t hesitate to contact us.</string>
    <string name="community_guideline_title">Community Guideline</string>
    <string name="text12">Welcome to our app, the platform for connecting with friends and strangers alike to share meals and create food parties! We are excited to have you as part of our community and want to ensure that everyone has a positive experience on the app. To that end, we have established the following guidelines for all members of the community to follow: \n\nBe respectful of others. We encourage friendly and polite interactions between all users of the app. Any harassment, abuse, or bullying will not be tolerated. \n\nKeep it clean. Please refrain from posting any offensive, inappropriate, or sexually explicit content on the app. \n\nProtect your privacy. Do not post any personal information about yourself or others on the app. This includes, but is not limited to, phone numbers, addresses, and personal photos. \n\nFollow the law. Do not use the app to engage in any illegal activities or to plan food parties that violate any laws or regulations. \n\nReport any problems. If you encounter any content or behavior on the app that you believe violates these guidelines or the law, please report it to us immediately. \n\nBy following these guidelines, you will help create a safe and welcoming community on the app. Thank you for your cooperation!</string>
    <string name="write_about_yourself">Write about yourself</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="where_are_you_from">Where are you from</string>
    <string name="keywords">Keywords</string>
    <string name="your_traits">Your traits</string>
</resources>