<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:verticalScrollbarPosition="defaultPosition"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/privacy_policy_back_Btn"
            android:layout_width="24sp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:text="@string/privacy_policy"
            android:textColor="#FF5E51"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/privacy_policy_back_Btn"
            app:layout_constraintStart_toEndOf="@id/privacy_policy_back_Btn"
            app:layout_constraintTop_toTopOf="@id/privacy_policy_back_Btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/privacy_policy">

        <RelativeLayout
            android:id="@+id/privacy_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_text"
                android:padding="32sp"
                android:textStyle="italic"
                android:textSize="16sp"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/information_we_collect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_we_collect"
                android:layout_below="@id/text1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/information_we_collect"
                android:layout_marginTop="0dp"
                android:justificationMode="inter_word"
                android:padding="32sp"
                android:text="@string/text2"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_we_use_your_information"
                android:layout_below="@id/text2"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title2"
                android:layout_marginTop="0dp"
                android:justificationMode="inter_word"
                android:padding="32sp"
                android:text="@string/text3"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/title4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sharing_your_information"
                android:layout_below="@id/text3"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title4"
                android:layout_marginTop="0dp"
                android:justificationMode="inter_word"
                android:padding="32sp"
                android:text="@string/text4"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/title5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_retention_and_security"
                android:layout_below="@id/text4"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title5"
                android:layout_marginTop="0dp"
                android:justificationMode="inter_word"
                android:padding="32sp"
                android:text="@string/text5"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/title6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changes_to_this_privacy_policy"
                android:layout_below="@id/text5"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title6"
                android:layout_marginTop="0dp"
                android:justificationMode="inter_word"
                android:padding="32sp"
                android:text="@string/text6"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/title7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:layout_below="@id/text6"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title7"
                android:layout_marginTop="0dp"
                android:justificationMode="inter_word"
                android:padding="32sp"
                android:text="@string/text7"
                android:textSize="16sp"
                android:textStyle="italic" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>