<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20sp"
    app:cardElevation="8sp"
    app:cardUseCompatPadding="true"
    android:backgroundTint="@color/vanilla">

    <LinearLayout
        android:id="@+id/cardView_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/cardView_mainBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_margin="8sp"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:elevation="12dp"
                android:id="@+id/pp_cardView"
                app:cardCornerRadius="40dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentStart="true">

                <ImageView
                    android:id="@+id/userImgView"
                    android:layout_height="80dp"
                    android:layout_width="match_parent"
                    android:src="@drawable/profile_icon"
                    android:scaleType="center"
                    android:contentDescription="@string/profile_pic" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/usernameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="0sp"
                android:layout_toStartOf="@+id/cardView_arrow"
                android:layout_toEndOf="@id/pp_cardView"
                android:padding="16sp"
                android:text="@string/organiser_name"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/cardView_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:padding="16sp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/arrow" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cardView_expandable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_title"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="16sp"/>

            <TextView
                android:id="@+id/locationTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Restaurant"
                android:textStyle="normal"
                android:textSize="16sp"
                android:padding="16sp"
                android:layout_toEndOf="@id/location" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_title"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="16sp"
                android:layout_below="@id/location"/>

            <TextView
                android:id="@+id/dateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textStyle="normal"
                android:textSize="16sp"
                android:padding="16sp"
                android:layout_toEndOf="@id/date"
                android:layout_below="@id/location"/>

            <TextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time_title"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="16sp"
                android:layout_below="@id/date"/>

            <TextView
                android:id="@+id/startTimeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textStyle="normal"
                android:textSize="16sp"
                android:padding="16sp"
                android:layout_toEndOf="@id/startTime"
                android:layout_below="@id/date"/>

            <TextView
                android:id="@+id/endTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time_title"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="16sp"
                android:layout_below="@id/startTime"/>

            <TextView
                android:id="@+id/endTimeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textStyle="normal"
                android:textSize="16sp"
                android:padding="16sp"
                android:layout_toEndOf="@id/endTime"
                android:layout_below="@id/startTime"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/endTime"
                android:gravity="center">

                <Button
                    android:id="@+id/declineBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decline"
                    android:backgroundTint="#FF0000"
                    android:layout_margin="8sp"
                    android:textColor="@color/white"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/acceptBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"
                    android:backgroundTint="#00FF00"
                    android:textColor="@color/black"
                    android:layout_margin="8sp"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>