<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Restaurant.RestaurantDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/restaurant_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:verticalScrollbarPosition="defaultPosition">

        <ImageView
            android:id="@+id/back_Btn"
            android:layout_width="24sp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20sp"
            android:src="@drawable/back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/restaurant_details_back_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:text="@string/restaurant_details"
            android:textColor="#FF5E51"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/back_Btn"
            app:layout_constraintStart_toEndOf="@id/back_Btn"
            app:layout_constraintTop_toTopOf="@id/back_Btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <ImageButton-->
<!--        android:id="@+id/back_Btn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/transparent"-->
<!--        android:elevation="4dp"-->
<!--        android:padding="16dp"-->
<!--        android:src="@drawable/arrow_back"-->
<!--        tools:ignore="SpeakableTextPresentCheck" />-->


    <ImageView
        android:id="@+id/restaurantImage"
        android:layout_width="match_parent"
        android:layout_height="260sp"
        android:src="@drawable/samanja"
        android:scaleType="centerCrop"
        android:layout_below="@id/restaurant_title_bar"/>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/TL_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/restaurantImage">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/VP2_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/holdPartyBtn"
        android:layout_below="@id/TL_details" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/holdPartyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_bold"
        android:padding="8dp"
        android:text="@string/hold_party"
        android:textAlignment="center"
        android:textSize="16sp" />


</RelativeLayout>